IGNITE-9686: fix for jdk8